# glusterfs-dfc

./: .gitignore  INSTALL  Makefile.am  configure.ac
lib/: Makefile.am  gfdfc.c  gfdfc.h
src/: Makefile.am  dfc.c  dfc.h
test/: Makefile.am  dfc-test.c
